attempt to correct github pages base url

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   // Dynamically set base href based on current URL
   const baseHref = window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1' 
     ? '/' 
-    : '/z3rsim-offline/';
+    : '/z3rsim_offline/';
   document.write('<base href="' + baseHref + '">');
 </script>
 <html lang="en"><head>
