update warning with generate seed disclaimer

--- a/index.html
+++ b/index.html
@@ -939,7 +939,8 @@ function addWarningBanner() {
         They will be either removed or fixed in a future update.
         For now, only the <strong>Overworld Simple/Advanced toggle</strong> has any effect.
 
-        To Start playing, upload a spoiler log from https://alttpr.com/en/randomizer via the Load Spoiler button in the navbar
+        To start playing, either click Generate Seed or upload a spoiler log from https://alttpr.com/en/randomizer via the Load Spoiler button in the navbar
+        Generate Seed will generate a Standard world seed with default settings
     `;
 
     // Insert the banner after the navbar
